Update to Practice Challenges index.html

--- a/index.html
+++ b/index.html
@@ -21,16 +21,13 @@
           </a>
     
           <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none text-dark" href="#">Features</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none text-dark" href="#">Enterprise</a>
-            <a class="me-3 py-2 link-body-emphasis text-decoration-none text-dark" href="#">Support</a>
-            <a class="py-2 link-body-emphasis text-decoration-none text-dark" href="#">Pricing</a>
+            <a class="py-2 link-body-emphasis text-decoration-none text-dark" href="#">About Me</a>
           </nav>
         </div>
     
         <div class="pricing-header p-3 pb-md-4 mx-auto text-center">
-          <h1 class="display-4 fw-normal text-body-emphasis">Pricing</h1>
-          <p class="fs-5 text-body-secondary">Quickly build an effective pricing table for your potential customers with this Bootstrap example. It’s built with default Bootstrap components and utilities with little customization.</p>
+          <h1 class="display-4 fw-normal text-body-emphasis">Practice Challenges</h1>
+          <p class="fs-5 text-body-secondary">The goal of this site is to display a hand full of practice challenges that have been developed to improve development skills. The challenges are generic challenges posed to myself and peers to continuously challenge and push our coding abilities.</p>
         </div>
       </header>
     <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
