Calculator App added and styled Practice challenges updated to include Calc app and styling changes

--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
               <h4 class="my-0 fw-normal">To-do List App</h4>
             </div>
             <div class="card-body">
-              <iframe src="/Practice Challenges/To-do List/index.html" title="To-do List App"></iframe>
-              <button type="button" class="w-100 btn btn-lg btn-outline-dark" href="/Practice Challenges/To-do List/index.html" target="_blank">Go to To-do List App</button>
+              <iframe src="/To-do List/index.html" title="To-do List App"></iframe>
+              <button type="button" class="w-100 btn btn-lg btn-dark" href="/Practice Challenges/To-do List/index.html" target="_blank">Go to To-do List App</button>
             </div>
           </div>
         </div>
@@ -48,14 +48,14 @@
               <h4 class="my-0 fw-normal">Calculator App</h4>
             </div>
             <div class="card-body">
-                <iframe src="" title="Calculator App"></iframe>
+                <iframe src="/Calculator/index.html" title="Calculator App"></iframe>
               <button type="button" class="w-100 btn btn-lg btn-dark">Go to Calculator App</button>
             </div>
           </div>
         </div>
         <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm border-dark">
-            <div class="card-header py-3 text-bg-dark border-dark">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3 ">
               <h4 class="my-0 fw-normal">Enterprise</h4>
             </div>
             <div class="card-body">
