Favicon added to practice challenge html along with formatting

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coding Practice Challenges</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link href= "styles.css" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="images/bookmark-heart-fill.svg">
+    
     
 </head>
 
@@ -38,7 +41,7 @@
             </div>
             <div class="card-body">
               <iframe src="/To-do List/index.html" title="To-do List App"></iframe>
-              <button type="button" class="w-100 btn btn-lg btn-dark" href="/Practice Challenges/To-do List/index.html" target="_blank">Go to To-do List App</button>
+              <a href="/To-do List/index.html" target="_blank" class="w-100 btn btn-lg btn-dark">Open To-do List App</a>
             </div>
           </div>
         </div>
@@ -49,18 +52,18 @@
             </div>
             <div class="card-body">
                 <iframe src="/Calculator/index.html" title="Calculator App"></iframe>
-              <button type="button" class="w-100 btn btn-lg btn-dark">Go to Calculator App</button>
+                <a href="/Calculator/index.html" target="_blank" class="w-100 btn btn-lg btn-dark">Open Calculator App</a>
             </div>
           </div>
         </div>
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3 ">
-              <h4 class="my-0 fw-normal">Enterprise</h4>
+              <h4 class="my-0 fw-normal">X App</h4>
             </div>
             <div class="card-body">
-                <iframe src="" title="To-do List App"></iframe>
-                <button type="button" class="w-100 btn btn-lg btn-dark">Contact us</button>
+                <iframe src="" title="X App"></iframe>
+                <a href="/" target="_blank" class="w-100 btn btn-lg btn-dark">Open X App</a>
             </div>
           </div>
         </div>
