Add dice app (customised) and drum kit app

--- a/index.html
+++ b/index.html
@@ -67,6 +67,39 @@
             </div>
           </div>
         </div>
+        <div class="col">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3 ">
+              <h4 class="my-0 fw-normal">X App</h4>
+            </div>
+            <div class="card-body">
+                <iframe src="" title="X App"></iframe>
+                <a href="/" target="_blank" class="w-100 btn btn-lg btn-dark">Open X App</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3 ">
+              <h4 class="my-0 fw-normal">Dice roll App</h4>
+            </div>
+            <div class="card-body">
+                <iframe src="/Dice Roll/index.html" title="Dice roll App"></iframe>
+                <a href="/Dice Roll/index.html" target="_blank" class="w-100 btn btn-lg btn-dark">Open X App</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3 ">
+              <h4 class="my-0 fw-normal">Open Drum Kit App (Udemy course activity on events)</h4>
+            </div>
+            <div class="card-body">
+                <iframe src="/Drum Kit (Complete Event Listeners)/index.html" title="X App"></iframe>
+                <a href="/Drum Kit (Complete Event Listeners)/index.html" target="_blank" class="w-100 btn btn-lg btn-dark">Open Drum Kit App</a>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 <script src="/docs/5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
