--- a/Dice Roll/index.html
+++ b/Dice Roll/index.html
@@ -10,7 +10,7 @@
     <link rel="icon" type="image/x-icon" href="images/6.png"> 
 </head>
   <body>
-      <h1>Refresh Me</h1>
+      <h1>Roll the dice</h1>
 
       <div class="container">
         <div class="dice">
@@ -20,6 +20,7 @@
           <img class="img2" src="images/dice1.png" />
         </div>
       </div>
+      <p>(Refresh the page)</p>
     <script src="index.js" charset="utf-8"></script>
   
   </body>
