--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link href= "styles.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="images/bookmark-heart-fill.svg">
-    
-    
 </head>
 
 <body>
@@ -62,8 +60,8 @@
               <h4 class="my-0 fw-normal">X App</h4>
             </div>
             <div class="card-body">
-                <iframe src="" title="X App"></iframe>
-                <a href="/" target="_blank" class="w-100 btn btn-lg btn-dark">Open X App</a>
+                <iframe src="/Quiz/index.html" title="Quiz App"></iframe>
+                <a href="/Quiz/index.html" target="_blank" class="w-100 btn btn-lg btn-dark">Open Quiz App</a>
             </div>
           </div>
         </div>
@@ -92,7 +90,7 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3 ">
-              <h4 class="my-0 fw-normal">Open Drum Kit App (Udemy course activity on events)</h4>
+              <h4 class="my-0 fw-normal">Drum Kit App (Udemy activity)</h4>
             </div>
             <div class="card-body">
                 <iframe src="/Drum Kit (Complete Event Listeners)/index.html" title="X App"></iframe>
