Card header for Quiz updated

--- a/index.html
+++ b/index.html
@@ -57,22 +57,11 @@
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3 ">
-              <h4 class="my-0 fw-normal">X App</h4>
+              <h4 class="my-0 fw-normal">Quiz App</h4>
             </div>
             <div class="card-body">
                 <iframe src="/Quiz/index.html" title="Quiz App"></iframe>
                 <a href="/Quiz/index.html" target="_blank" class="w-100 btn btn-lg btn-dark">Open Quiz App</a>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card mb-4 rounded-3 shadow-sm">
-            <div class="card-header py-3 ">
-              <h4 class="my-0 fw-normal">X App</h4>
-            </div>
-            <div class="card-body">
-                <iframe src="" title="X App"></iframe>
-                <a href="/" target="_blank" class="w-100 btn btn-lg btn-dark">Open X App</a>
             </div>
           </div>
         </div>
@@ -95,6 +84,17 @@
             <div class="card-body">
                 <iframe src="/Drum Kit (Complete Event Listeners)/index.html" title="X App"></iframe>
                 <a href="/Drum Kit (Complete Event Listeners)/index.html" target="_blank" class="w-100 btn btn-lg btn-dark">Open Drum Kit App</a>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card mb-4 rounded-3 shadow-sm">
+            <div class="card-header py-3 ">
+              <h4 class="my-0 fw-normal">X App</h4>
+            </div>
+            <div class="card-body">
+                <iframe src="" title="X App"></iframe>
+                <a href="/" target="_blank" class="w-100 btn btn-lg btn-dark">Open X App</a>
             </div>
           </div>
         </div>
