Roll dice button added

--- a/Dice Roll/index.html
+++ b/Dice Roll/index.html
@@ -19,8 +19,8 @@
         <div class="dice">
           <img class="img2" src="images/dice1.png" />
         </div>
+        <button id="refresh-btn">Roll the dice</button>
       </div>
-      <p>(Refresh the page)</p>
     <script src="index.js" charset="utf-8"></script>
   
   </body>
