--- a/Quiz/index.html
+++ b/Quiz/index.html
@@ -6,7 +6,6 @@
   <title>Simple Quiz App</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Honk&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -16,7 +15,8 @@
     <button id="submit-btn">Submit</button>
     <div id="result-container"></div>
   </div>
-
+  
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
